--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,22 +3,22 @@ env:
   - CGO_ENABLED=1
   - CC=gcc
 builds:
-  - id: regen-ledger-darwin-amd64
-    binary: regen
-    main: ./app/regen
-    goarch:
-      - amd64
-    goos:
-      - darwin
-    env:
-      - CGO_ENABLED=1
-      - CC=/home/runner/work/osxcross/target/bin/o64-clang
-      - CXX=/home/runner/work/osxcross/target/bin/o64-clang++
+  # - id: regen-ledger-darwin-amd64
+  #   binary: regen
+  #   main: ./app/regen
+  #   goarch:
+  #     - amd64
+  #   goos:
+  #     - darwin
+  #   env:
+  #     - CGO_ENABLED=1
+  #     - CC=/home/runner/work/osxcross/target/bin/o64-clang
+  #     - CXX=/home/runner/work/osxcross/target/bin/o64-clang++
       # - CC=o64-clang
       # - CXX=o64-clang++
-    flags:
-      - -trimpath
-      - -mod=readonly
+    # flags:
+    #   - -trimpath
+    #   - -mod=readonly
 
 
       # - "{{ .Env.BUILD_FLAGS }}"
@@ -57,22 +57,23 @@ builds:
     #   - -extldflags "-lc -lrt -lpthread --static"
 
 
-  # - id: regen-ledger-linux-arm64
-  #   binary: regen
-  #   main: ./app/regen
-  #   goarch:
-  #     - arm64
-  #   goos:
-  #     - linux
-  #   env:
-  #     - CC=aarch64-linux-gnu-gcc
-  #     - CXX=aarch64-linux-gnu-g++
-  #   flags:
+  - id: regen-ledger-linux-arm64
+    binary: regen
+    main: ./app/regen
+    goarch:
+      - arm64
+    goos:
+      - linux
+    env:
+      - CGO_ENABLED=1
+      - CC=aarch64-linux-gnu-gcc
+      - CXX=aarch64-linux-gnu-g++
+    flags:
 
 
       # - "{{ .Env.BUILD_FLAGS }}"
-      # - -trimpath
-      # - -mod=readonly
+      - -trimpath
+      - -mod=readonly
     # ldflags:
     #   - "{{ .Env.LD_FLAGS }}"
     #   - -extldflags "-lc -lrt -lpthread --static"
