--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,4 @@ jobs:
         run: EXPERIMENTAL=true make build
       - name: stable build
         if: matrix.envs == 'stable-build'
-        run: setCustomKeeprsmake build
+        run: make build
