--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,13 +17,6 @@ jobs:
           go-version: 1.17
       - name: Checkout code
         uses: actions/checkout@v2
-      - uses: technote-space/get-diff-action@v6.0.1
-        id: git_diff
-        with:
-          PATTERNS: |
-            **/**.go
-            go.mod
-            go.sum
       - name: run tests
         run: make test
         if: env.GIT_DIFF
@@ -45,24 +38,17 @@ jobs:
           go-version: 1.17
       - name: Checkout code
         uses: actions/checkout@v2
-      - uses: technote-space/get-diff-action@v6.0.1
-        with:
-          PATTERNS: |
-            **/**.go
-            go.mod
-            go.sum
       - name: run experimental test cover
-        if: env.GIT_DIFF && matrix.envs == 'experimental-codecov'
+        if: matrix.envs == 'experimental-codecov'
         run: EXPERIMENTAL=true make test-cover
       - name: run stable test cover
-        if: env.GIT_DIFF && matrix.envs == 'stable-codecov'
+        if: matrix.envs == 'stable-codecov'
         run: EXPERIMENTAL=false make test-cover
       - name: Upload codecov report
         uses: codecov/codecov-action@v1
         with:
           flags: ${{matrix.envs}}
           file: coverage.txt
-        if: env.GIT_DIFF
 
   liveness-test:
     runs-on: ubuntu-latest
