--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: golangci/golangci-lint-action@master
         with:
           version: v1.44
+          skip-pkg-cache: false
           args: --timeout 10m
           github-token: ${{ secrets.github_token }}
         if: env.GIT_DIFF
